syntax = "proto3";
package internal;

// 0x01
message CheckinRequest {
    string Source = 1;
}

// 0x02
message CheckinResponse {
    string Addr = 1;
}

// 0x03
message ForwardRequest {
    string Id = 1;
    string Mode = 2;
    string Source = 3;
    string SourceAddr = 4;
    string SourceBridge = 5;
    bool SourceDhcp = 6;
    repeated string SourceRoutes = 7;
    string Target = 8;
    string TargetAddr = 9;
    string TargetBridge = 10;
    repeated string TargetRoutes = 11;
    string TargetForwardAddr = 12;
    repeated string TargetCommand = 13;
}

// 0x04
message ForwardResponse {
    string Id = 1;
    bool Success = 2;
    string Source = 3;
    string SourceAddr = 4;
    repeated string SourceRoutesDiscovered = 5;
    string Target = 6;
    string TargetAddr = 7;
}
